fix main title ::before z-index

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -77,6 +77,7 @@
 
 .hero-em {
     position: relative;
+    z-index: 1;
 }
 
 .hero-em::before {
@@ -87,8 +88,8 @@
     top: 0;
     left: 10%;
     background: var(--red);
-    z-index: -1;
     transform: skew(-15deg, -3deg);
+    z-index: -1;
 }
 
 .hero-link {
